Ip, region and country working

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   background: url('https://source.unsplash.com/1L71sPT5XKc');
-  color: #fff;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
