--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
+    background: white;
     width: 80%;
     margin: 0 auto;
     margin-top: 1rem;
