--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   background: url('https://source.unsplash.com/1L71sPT5XKc');
   color: black;
   display: flex;
