--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,12 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background: url('https://source.unsplash.com/1L71sPT5XKc');
+  background-image: url('/public/planetpic.jpg');
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-repeat: inherit;
+  background-repeat:repeat;
 }
 
