--- a/src/components/IP/IpAddress.module.css
+++ b/src/components/IP/IpAddress.module.css
@@ -1,7 +1,8 @@
 .info {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    text-align:start;
+    white-space: pre-line;
 }
 
 .bold {
